--- a/stransportation/css/contact.css
+++ b/stransportation/css/contact.css
@@ -1,6 +1,8 @@
 /* Contact Banner */
 .contact-banner {
-   background: linear-gradient(rgba(23, 96, 205, 0.59), rgba(8, 161, 128, 0.552)), url('https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80');
+   /* background: linear-gradient(rgba(23, 96, 205, 0.59), rgba(8, 161, 128, 0.552)), url('https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80');
+    */
+    background: linear-gradient(rgba(26, 95, 206, 0.85), rgba(24, 183, 152, 0.8)), url('https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80');
     background-size: cover;
     background-position: center;
     padding: 150px 20px;
