--- a/stransportation/css/service.css
+++ b/stransportation/css/service.css
@@ -50,7 +50,7 @@ body {
   background-color: #0ec849;
   color: white;
   position: absolute;
-  top: 270px;
+  top: 300px;
   right: 1150px;
   padding: 10px 15px;
   border-radius: 5px;
@@ -58,7 +58,7 @@ body {
   font-weight: bold;
   display: block;
   margin: 15px auto 0 auto;
-  border: 1px solid
+  border: 1px solid;
 }
 
 .hero-text {
