--- a/stransportation/css/statrgy.css
+++ b/stransportation/css/statrgy.css
@@ -32,7 +32,7 @@
 
         /* Header & Navigation */
         header {
-            background-color: var(--primary);
+            background-color: white;
             color: white;
             padding: 1rem 0;
             position: sticky;
@@ -69,7 +69,7 @@
         }
 
         nav ul li a {
-            color: white;
+            color:black;
             text-decoration: none;
             font-weight: 500;
             transition: var(--transition);
