--- a/stransportation/css/statrgy.css
+++ b/stransportation/css/statrgy.css
@@ -55,6 +55,10 @@
             gap: 10px;
         }
 
+        .logo span{
+            color: rgba(23, 28, 28, 0.604);
+        }
+
         .logo i {
             color: var(--secondary);
         }
